jobstreamconverter/src/main/java/org/jobscheduler/converter/tws/icalendar/ICalendarParser.java
// $ANTLR 3.5.2 /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g 2015-04-20 06:29:13

package org.jobscheduler.converter.tws.icalendar ;
import java.util.LinkedList ;





import org.antlr.runtime.*;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;
import org.jobscheduler.converter.tws.scheduler.*;
import org.jobscheduler.converter.tws.scheduler.Weekdays.Day;


@SuppressWarnings("all")
public class ICalendarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "NUMBER", "','", "'-'", 
		"';'", "'='", "'BYDAY'", "'BYFREEDAY'", "'BYMONTHDAY'", "'BYWORKDAY'", 
		"'DAILY'", "'FR'", "'FREQ'", "'INTERVAL'", "'MO'", "'MONTHLY'", "'SA'", 
		"'SU'", "'TH'", "'TU'", "'WE'", "'WEEKLY'", "'YEARLY'"
	};
	public static final int EOF=-1;
	public static final int T__6=6;
	public static final int T__7=7;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int COMMENT=4;
	public static final int NUMBER=5;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ICalendarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ICalendarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ICalendarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g"; }


	public static class calendar_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "calendar"
	// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:23:1: calendar[RunTime runTime,boolean on] : ( ( daily[runTime] ) | ( weekly ) | ( monthDays ) | ( lasts ) | yearly );
	public final ICalendarParser.calendar_return calendar(RunTime runTime, boolean on) throws RecognitionException {
		ICalendarParser.calendar_return retval = new ICalendarParser.calendar_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope daily1 =null;
		ParserRuleReturnScope weekly2 =null;
		ParserRuleReturnScope monthDays3 =null;
		ParserRuleReturnScope lasts4 =null;
		ParserRuleReturnScope yearly5 =null;


		try {
			// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:23:38: ( ( daily[runTime] ) | ( weekly ) | ( monthDays ) | ( lasts ) | yearly )
			int alt1=5;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==16) ) {
				int LA1_1 = input.LA(2);
				if ( (LA1_1==9) ) {
					switch ( input.LA(3) ) {
					case 14:
						{
						alt1=1;
						}
						break;
					case 25:
						{
						alt1=2;
						}
						break;
					case 19:
						{
						switch ( input.LA(4) ) {
						case 8:
							{
							switch ( input.LA(5) ) {
							case 17:
								{
								int LA1_8 = input.LA(6);
								if ( (LA1_8==9) ) {
									int LA1_11 = input.LA(7);
									if ( (LA1_11==NUMBER) ) {
										switch ( input.LA(8) ) {
										case 8:
											{
											int LA1_15 = input.LA(9);
											if ( (LA1_15==12) ) {
												int LA1_9 = input.LA(10);
												if ( (LA1_9==9) ) {
													int LA1_12 = input.LA(11);
													if ( (LA1_12==7) ) {
														alt1=4;
													}
													else if ( (LA1_12==NUMBER) ) {
														alt1=3;
													}

													else {
														int nvaeMark = input.mark();
														try {
															for (int nvaeConsume = 0; nvaeConsume < 11 - 1; nvaeConsume++) {
																input.consume();
															}
															NoViableAltException nvae =
																new NoViableAltException("", 1, 12, input);
															throw nvae;
														} finally {
															input.rewind(nvaeMark);
														}
													}

												}

												else {
													int nvaeMark = input.mark();
													try {
														for (int nvaeConsume = 0; nvaeConsume < 10 - 1; nvaeConsume++) {
															input.consume();
														}
														NoViableAltException nvae =
															new NoViableAltException("", 1, 9, input);
														throw nvae;
													} finally {
														input.rewind(nvaeMark);
													}
												}

											}
											else if ( (LA1_15==10) ) {
												alt1=3;
											}

											else {
												int nvaeMark = input.mark();
												try {
													for (int nvaeConsume = 0; nvaeConsume < 9 - 1; nvaeConsume++) {
														input.consume();
													}
													NoViableAltException nvae =
														new NoViableAltException("", 1, 15, input);
													throw nvae;
												} finally {
													input.rewind(nvaeMark);
												}
											}

											}
											break;
										case 12:
											{
											int LA1_9 = input.LA(9);
											if ( (LA1_9==9) ) {
												int LA1_12 = input.LA(10);
												if ( (LA1_12==7) ) {
													alt1=4;
												}
												else if ( (LA1_12==NUMBER) ) {
													alt1=3;
												}

												else {
													int nvaeMark = input.mark();
													try {
														for (int nvaeConsume = 0; nvaeConsume < 10 - 1; nvaeConsume++) {
															input.consume();
														}
														NoViableAltException nvae =
															new NoViableAltException("", 1, 12, input);
														throw nvae;
													} finally {
														input.rewind(nvaeMark);
													}
												}

											}

											else {
												int nvaeMark = input.mark();
												try {
													for (int nvaeConsume = 0; nvaeConsume < 9 - 1; nvaeConsume++) {
														input.consume();
													}
													NoViableAltException nvae =
														new NoViableAltException("", 1, 9, input);
													throw nvae;
												} finally {
													input.rewind(nvaeMark);
												}
											}

											}
											break;
										case 10:
											{
											alt1=3;
											}
											break;
										default:
											int nvaeMark = input.mark();
											try {
												for (int nvaeConsume = 0; nvaeConsume < 8 - 1; nvaeConsume++) {
													input.consume();
												}
												NoViableAltException nvae =
													new NoViableAltException("", 1, 13, input);
												throw nvae;
											} finally {
												input.rewind(nvaeMark);
											}
										}
									}

									else {
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 1, 11, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}

								}

								else {
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 1, 8, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

								}
								break;
							case 12:
								{
								int LA1_9 = input.LA(6);
								if ( (LA1_9==9) ) {
									int LA1_12 = input.LA(7);
									if ( (LA1_12==7) ) {
										alt1=4;
									}
									else if ( (LA1_12==NUMBER) ) {
										alt1=3;
									}

									else {
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 1, 12, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}

								}

								else {
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 1, 9, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

								}
								break;
							case 10:
								{
								alt1=3;
								}
								break;
							default:
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 1, 7, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}
							}
							break;
						case 17:
							{
							int LA1_8 = input.LA(5);
							if ( (LA1_8==9) ) {
								int LA1_11 = input.LA(6);
								if ( (LA1_11==NUMBER) ) {
									switch ( input.LA(7) ) {
									case 8:
										{
										int LA1_15 = input.LA(8);
										if ( (LA1_15==12) ) {
											int LA1_9 = input.LA(9);
											if ( (LA1_9==9) ) {
												int LA1_12 = input.LA(10);
												if ( (LA1_12==7) ) {
													alt1=4;
												}
												else if ( (LA1_12==NUMBER) ) {
													alt1=3;
												}

												else {
													int nvaeMark = input.mark();
													try {
														for (int nvaeConsume = 0; nvaeConsume < 10 - 1; nvaeConsume++) {
															input.consume();
														}
														NoViableAltException nvae =
															new NoViableAltException("", 1, 12, input);
														throw nvae;
													} finally {
														input.rewind(nvaeMark);
													}
												}

											}

											else {
												int nvaeMark = input.mark();
												try {
													for (int nvaeConsume = 0; nvaeConsume < 9 - 1; nvaeConsume++) {
														input.consume();
													}
													NoViableAltException nvae =
														new NoViableAltException("", 1, 9, input);
													throw nvae;
												} finally {
													input.rewind(nvaeMark);
												}
											}

										}
										else if ( (LA1_15==10) ) {
											alt1=3;
										}

										else {
											int nvaeMark = input.mark();
											try {
												for (int nvaeConsume = 0; nvaeConsume < 8 - 1; nvaeConsume++) {
													input.consume();
												}
												NoViableAltException nvae =
													new NoViableAltException("", 1, 15, input);
												throw nvae;
											} finally {
												input.rewind(nvaeMark);
											}
										}

										}
										break;
									case 12:
										{
										int LA1_9 = input.LA(8);
										if ( (LA1_9==9) ) {
											int LA1_12 = input.LA(9);
											if ( (LA1_12==7) ) {
												alt1=4;
											}
											else if ( (LA1_12==NUMBER) ) {
												alt1=3;
											}

											else {
												int nvaeMark = input.mark();
												try {
													for (int nvaeConsume = 0; nvaeConsume < 9 - 1; nvaeConsume++) {
														input.consume();
													}
													NoViableAltException nvae =
														new NoViableAltException("", 1, 12, input);
													throw nvae;
												} finally {
													input.rewind(nvaeMark);
												}
											}

										}

										else {
											int nvaeMark = input.mark();
											try {
												for (int nvaeConsume = 0; nvaeConsume < 8 - 1; nvaeConsume++) {
													input.consume();
												}
												NoViableAltException nvae =
													new NoViableAltException("", 1, 9, input);
												throw nvae;
											} finally {
												input.rewind(nvaeMark);
											}
										}

										}
										break;
									case 10:
										{
										alt1=3;
										}
										break;
									default:
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 1, 13, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}
								}

								else {
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 1, 11, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 1, 8, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

							}
							break;
						case 12:
							{
							int LA1_9 = input.LA(5);
							if ( (LA1_9==9) ) {
								int LA1_12 = input.LA(6);
								if ( (LA1_12==7) ) {
									alt1=4;
								}
								else if ( (LA1_12==NUMBER) ) {
									alt1=3;
								}

								else {
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 1, 12, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 1, 9, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

							}
							break;
						case 10:
							{
							alt1=3;
							}
							break;
						default:
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 1, 5, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}
						}
						break;
					case 26:
						{
						alt1=5;
						}
						break;
					default:
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:24:2: ( daily[runTime] )
					{
					root_0 = (Object)adaptor.nil();


					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:24:2: ( daily[runTime] )
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:24:2: daily[runTime]
					{
					pushFollow(FOLLOW_daily_in_calendar56);
					daily1=daily(runTime);
					state._fsp--;

					adaptor.addChild(root_0, daily1.getTree());

					}

					}
					break;
				case 2 :
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:25:2: ( weekly )
					{
					root_0 = (Object)adaptor.nil();


					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:25:2: ( weekly )
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:25:3: weekly
					{
					pushFollow(FOLLOW_weekly_in_calendar63);
					weekly2=weekly();
					state._fsp--;

					adaptor.addChild(root_0, weekly2.getTree());



					runTime.setWeekdays((weekly2!=null?((ICalendarParser.weekly_return)weekly2).wds:null));


					}

					}
					break;
				case 3 :
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:30:2: ( monthDays )
					{
					root_0 = (Object)adaptor.nil();


					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:30:2: ( monthDays )
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:30:3: monthDays
					{
					pushFollow(FOLLOW_monthDays_in_calendar70);
					monthDays3=monthDays();
					state._fsp--;

					adaptor.addChild(root_0, monthDays3.getTree());



					runTime.setMonthdays((monthDays3!=null?((ICalendarParser.monthDays_return)monthDays3).mds:null));



					}

					}
					break;
				case 4 :
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:36:2: ( lasts )
					{
					root_0 = (Object)adaptor.nil();


					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:36:2: ( lasts )
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:36:3: lasts
					{
					pushFollow(FOLLOW_lasts_in_calendar76);
					lasts4=lasts();
					state._fsp--;

					adaptor.addChild(root_0, lasts4.getTree());




					runTime.setUltimos((lasts4!=null?((ICalendarParser.lasts_return)lasts4).ultimos:null));



					}

					}
					break;
				case 5 :
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:45:2: yearly
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_yearly_in_calendar85);
					yearly5=yearly();
					state._fsp--;

					adaptor.addChild(root_0, yearly5.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "calendar"


	public static class daily_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "daily"
	// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:50:1: daily[RunTime runTime] : 'FREQ' '=' 'DAILY' ( ';' )? ( 'INTERVAL' '=' NUMBER ( ';' )? )? ( 'BYFREEDAY' | ( 'BYWORKDAY' ) )? ;
	public final ICalendarParser.daily_return daily(RunTime runTime) throws RecognitionException {
		ICalendarParser.daily_return retval = new ICalendarParser.daily_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal6=null;
		Token char_literal7=null;
		Token string_literal8=null;
		Token char_literal9=null;
		Token string_literal10=null;
		Token char_literal11=null;
		Token NUMBER12=null;
		Token char_literal13=null;
		Token set14=null;

		Object string_literal6_tree=null;
		Object char_literal7_tree=null;
		Object string_literal8_tree=null;
		Object char_literal9_tree=null;
		Object string_literal10_tree=null;
		Object char_literal11_tree=null;
		Object NUMBER12_tree=null;
		Object char_literal13_tree=null;
		Object set14_tree=null;

		try {
			// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:50:28: ( 'FREQ' '=' 'DAILY' ( ';' )? ( 'INTERVAL' '=' NUMBER ( ';' )? )? ( 'BYFREEDAY' | ( 'BYWORKDAY' ) )? )
			// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:52:1: 'FREQ' '=' 'DAILY' ( ';' )? ( 'INTERVAL' '=' NUMBER ( ';' )? )? ( 'BYFREEDAY' | ( 'BYWORKDAY' ) )?
			{
			root_0 = (Object)adaptor.nil();


			string_literal6=(Token)match(input,16,FOLLOW_16_in_daily103); 
			string_literal6_tree = (Object)adaptor.create(string_literal6);
			adaptor.addChild(root_0, string_literal6_tree);

			char_literal7=(Token)match(input,9,FOLLOW_9_in_daily105); 
			char_literal7_tree = (Object)adaptor.create(char_literal7);
			adaptor.addChild(root_0, char_literal7_tree);

			string_literal8=(Token)match(input,14,FOLLOW_14_in_daily107); 
			string_literal8_tree = (Object)adaptor.create(string_literal8);
			adaptor.addChild(root_0, string_literal8_tree);

			// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:52:20: ( ';' )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==8) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:52:21: ';'
					{
					char_literal9=(Token)match(input,8,FOLLOW_8_in_daily110); 
					char_literal9_tree = (Object)adaptor.create(char_literal9);
					adaptor.addChild(root_0, char_literal9_tree);

					}
					break;

			}

			// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:52:27: ( 'INTERVAL' '=' NUMBER ( ';' )? )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==17) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:52:28: 'INTERVAL' '=' NUMBER ( ';' )?
					{
					string_literal10=(Token)match(input,17,FOLLOW_17_in_daily115); 
					string_literal10_tree = (Object)adaptor.create(string_literal10);
					adaptor.addChild(root_0, string_literal10_tree);

					char_literal11=(Token)match(input,9,FOLLOW_9_in_daily117); 
					char_literal11_tree = (Object)adaptor.create(char_literal11);
					adaptor.addChild(root_0, char_literal11_tree);

					NUMBER12=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_daily119); 
					NUMBER12_tree = (Object)adaptor.create(NUMBER12);
					adaptor.addChild(root_0, NUMBER12_tree);

					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:52:50: ( ';' )?
					int alt3=2;
					int LA3_0 = input.LA(1);
					if ( (LA3_0==8) ) {
						alt3=1;
					}
					switch (alt3) {
						case 1 :
							// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:52:51: ';'
							{
							char_literal13=(Token)match(input,8,FOLLOW_8_in_daily122); 
							char_literal13_tree = (Object)adaptor.create(char_literal13);
							adaptor.addChild(root_0, char_literal13_tree);

							}
							break;

					}

					}
					break;

			}

			// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:52:59: ( 'BYFREEDAY' | ( 'BYWORKDAY' ) )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==11||LA5_0==13) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:
					{
					set14=input.LT(1);
					if ( input.LA(1)==11||input.LA(1)==13 ) {
						input.consume();
						adaptor.addChild(root_0, (Object)adaptor.create(set14));
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "daily"


	public static class weekly_return extends ParserRuleReturnScope {
		public Weekdays wds;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "weekly"
	// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:56:1: weekly returns [Weekdays wds] : 'FREQ' '=' 'WEEKLY' ( ';' )? ( 'INTERVAL' '=' NUMBER ( ';' )? )? 'BYDAY' '=' ( weekDayList ( ',' )? )+ ;
	public final ICalendarParser.weekly_return weekly() throws RecognitionException {
		ICalendarParser.weekly_return retval = new ICalendarParser.weekly_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal15=null;
		Token char_literal16=null;
		Token string_literal17=null;
		Token char_literal18=null;
		Token string_literal19=null;
		Token char_literal20=null;
		Token NUMBER21=null;
		Token char_literal22=null;
		Token string_literal23=null;
		Token char_literal24=null;
		Token char_literal26=null;
		ParserRuleReturnScope weekDayList25 =null;

		Object string_literal15_tree=null;
		Object char_literal16_tree=null;
		Object string_literal17_tree=null;
		Object char_literal18_tree=null;
		Object string_literal19_tree=null;
		Object char_literal20_tree=null;
		Object NUMBER21_tree=null;
		Object char_literal22_tree=null;
		Object string_literal23_tree=null;
		Object char_literal24_tree=null;
		Object char_literal26_tree=null;

		try {
			// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:56:31: ( 'FREQ' '=' 'WEEKLY' ( ';' )? ( 'INTERVAL' '=' NUMBER ( ';' )? )? 'BYDAY' '=' ( weekDayList ( ',' )? )+ )
			// /home/cloud/Desktop/git/jstech/migration/af.jstech.migration/src/af/jstech/migration/icalendar/ICalendar.g:57:1: 'FREQ' '=' 'WEEKLY' ( ';' )? ( 'INTERVAL' '=' NUMBER ( ';' )? )? 'BYDAY' '=' ( weekDayList ( ',' )? )+
			{
			root_0 = (Object)adaptor.nil();



			retval.wds = new Weekdays() ; 

			string_literal15=(Token)match(input,16,FOLLOW_16_in_weekly151); 
			string_literal15_tree = (Object)adaptor.create(string_literal15);
			adaptor.addChild(root_0, string_literal15_tree);
